# org.slashlib.py.inference.ollama

./: .gitignore  AI.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.json  pyproject.toml
.config/: env.ps1
.obsidian/: app.json  community-plugins.json
.obsidian/plugins/file-include/: main.js
.obsidian/plugins/folder-notes/: data.json
.obsidian/plugins/hide-folders/: data.json  main.js
assets/: logging.json
docs/: docs.md
docs/01. Project structure/: 01. Project structure.md
docs/01. Projektstruktur/: 01. Projektstruktur.md
docs/02. Setup/: 02. Setup.md
docs/03. Dependencies/: 03. Dependencies.md
docs/04. Testing/: 04. Testing.md
docs/05. Packaging & Publishing/: 05. Packaging & Publishing.md
docs/07. OllamaInferenceAdapter/: 07. OllamaInferenceAdapter.md
docs/08. OllamaInferenceResult/: 08. OllamaInferenceResult.md
src/org/slashlib/py/inference/ollama/: __init__.py  adapter.py  result.py
tests/: 00_00_00_importlibs_test.py  01_01_00_result_test.py  01_01_01_ollama_ollamainferenceresult_raw_test.py  02_01_00_adapter.py  02_01_00_adapter_test.py
